2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Marital_Status_HT__c.field-meta.xml
<CustomField>
    <fullName>Marital_Status_HT__c</fullName>
    <label>Marital Status:</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Married</fullName>
            </value>
            <value>
                <fullName>Divorced</fullName>
            </value>
            <value>
                <fullName>Widowed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>