2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Material_Id__c.field-meta.xml
<CustomField>
    <fullName>Material_Id__c</fullName>
    <label>Material Id 2D</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>