2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/MCST__c.field-meta.xml
<CustomField>
    <fullName>MCST__c</fullName>
    <label>MCST #</label>
    <length>99</length>
    <type>Text</type>
</CustomField>