2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Meal_Preferance__c.field-meta.xml
<CustomField>
    <fullName>Meal_Preferance__c</fullName>
    <label>Meal Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No restriction</fullName>
            </value>
            <value>
                <fullName>Halal</fullName>
            </value>
            <value>
                <fullName>Vegetarian</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>