2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Medical_Leave__c.field-meta.xml
<CustomField>
    <fullName>Medical_Leave__c</fullName>
    <label>Medical Leave</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>