2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Member_of_Professional_Institute_Year__c.field-meta.xml
<CustomField>
    <fullName>Member_of_Professional_Institute_Year__c</fullName>
    <label>Member of Professional Institute/Year</label>
    <type>TextArea</type>
</CustomField>