2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Mobile_HT__c.field-meta.xml
<CustomField>
    <fullName>Mobile_HT__c</fullName>
    <label>Mobile:</label>
    <type>Phone</type>
</CustomField>