2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <formula>FirstName + &quot; &quot; +  LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Name is FirstName &amp; LastName</inlineHelpText>
    <label>Name</label>
    <type>Text</type>
</CustomField>