2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Nationality_HT__c.field-meta.xml
<CustomField>
    <fullName>Nationality_HT__c</fullName>
    <label>Nationality:</label>
    <length>20</length>
    <type>Text</type>
</CustomField>