2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Next_Review__c.field-meta.xml
<CustomField>
    <fullName>Next_Review__c</fullName>
    <label>Next Review</label>
    <type>Date</type>
</CustomField>