2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/No_of_Expatriats_in_Company__c.field-meta.xml
<CustomField>
    <fullName>No_of_Expatriats_in_Company__c</fullName>
    <label>No. of Expatriats in Company</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>