2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Notice_Period_to_Current_Employer__c.field-meta.xml
<CustomField>
    <fullName>Notice_Period_to_Current_Employer__c</fullName>
    <label>Notice Period to Current Employer</label>
    <length>20</length>
    <type>Text</type>
</CustomField>