2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/NS_Status_HT__c.field-meta.xml
<CustomField>
    <fullName>NS_Status_HT__c</fullName>
    <label>NS Status:</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NSF</fullName>
            </value>
            <value>
                <fullName>ORD</fullName>
            </value>
            <value>
                <fullName>MR</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>