2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Number_of_Incident_Records__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Incident_Records__c</fullName>
    <label>Number of Incident Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>