2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Other_Academic_Qualifications_Year__c.field-meta.xml
<CustomField>
    <fullName>Other_Academic_Qualifications_Year__c</fullName>
    <label>Other Academic Qualifications/Year</label>
    <type>TextArea</type>
</CustomField>