2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Other_Allowance_s_HT__c.field-meta.xml
<CustomField>
    <fullName>Other_Allowance_s_HT__c</fullName>
    <label>Other Allowance(s):</label>
    <type>TextArea</type>
</CustomField>