2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Others__c.field-meta.xml
<CustomField>
    <fullName>Others__c</fullName>
    <label>Others</label>
    <type>TextArea</type>
</CustomField>