2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Pack_Crate_3D__c.field-meta.xml
<CustomField>
    <fullName>Pack_Crate_3D__c</fullName>
    <label>Pack 3D</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>