2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Passport_Expiry_HT__c.field-meta.xml
<CustomField>
    <fullName>Passport_Expiry_HT__c</fullName>
    <label>Passport Expiry:</label>
    <type>Date</type>
</CustomField>