2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Passport_No_HT__c.field-meta.xml
<CustomField>
    <fullName>Passport_No_HT__c</fullName>
    <label>Passport No:</label>
    <length>20</length>
    <type>Text</type>
</CustomField>