2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Period_HT__c.field-meta.xml
<CustomField>
    <fullName>Period_HT__c</fullName>
    <label>Period:</label>
    <length>30</length>
    <type>Text</type>
</CustomField>