2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Personal_Character_References__c.field-meta.xml
<CustomField>
    <fullName>Personal_Character_References__c</fullName>
    <defaultValue>&quot;Name&quot;&amp;BR()&amp; 
&quot;Address&quot;&amp;BR()&amp; 
&quot;Occupation&quot;&amp;BR()&amp; 
&quot;No. of years known&quot;&amp;BR()&amp; 
&quot;Contact No. (Off)&quot;&amp;BR()&amp; 
&quot;Contact No. (HP)&quot;&amp;BR()&amp; 
&quot;Email Address&quot;&amp;BR()&amp;BR()&amp; 
&quot;Name&quot;&amp;BR()&amp; 
&quot;Address&quot;&amp;BR()&amp; 
&quot;Occupation&quot;&amp;BR()&amp; 
&quot;No. of years known&quot;&amp;BR()&amp; 
&quot;Contact No. (Off)&quot;&amp;BR()&amp; 
&quot;Contact No. (HP)&quot;&amp;BR()&amp; 
&quot;Email Address&quot;</defaultValue>
    <label>Personal Character References</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>