2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Pet_s_Name_s__c.field-meta.xml
<CustomField>
    <fullName>Pet_s_Name_s__c</fullName>
    <label>Pet(s) Name(s)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>