2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Place_of_Birth_HT__c.field-meta.xml
<CustomField>
    <fullName>Place_of_Birth_HT__c</fullName>
    <label>Place of Birth:</label>
    <length>20</length>
    <type>Text</type>
</CustomField>