2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Probation_Period_HT__c.field-meta.xml
<CustomField>
    <fullName>Probation_Period_HT__c</fullName>
    <label>Probation Period:</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3 Months</fullName>
            </value>
            <value>
                <fullName>6 Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>