2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Punctuality__c.field-meta.xml
<CustomField>
    <fullName>Punctuality__c</fullName>
    <label>Punctuality</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>