2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Race_HT__c.field-meta.xml
<CustomField>
    <fullName>Race_HT__c</fullName>
    <label>Race:</label>
    <length>20</length>
    <type>Text</type>
</CustomField>