2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Reason_for_leaving_employment_HT__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_leaving_employment_HT__c</fullName>
    <label>Reason for leaving employment:</label>
    <type>TextArea</type>
</CustomField>