2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Rehire_Date_HT__c.field-meta.xml
<CustomField>
    <fullName>Rehire_Date_HT__c</fullName>
    <label>Rehire Date:</label>
    <type>Date</type>
</CustomField>