2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Relationship_HT__c.field-meta.xml
<CustomField>
    <fullName>Relationship_HT__c</fullName>
    <label>Relationship:</label>
    <length>20</length>
    <type>Text</type>
</CustomField>