2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Religion_HT__c.field-meta.xml
<CustomField>
    <fullName>Religion_HT__c</fullName>
    <label>Religion:</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Atheist</fullName>
            </value>
            <value>
                <fullName>Buddhist</fullName>
            </value>
            <value>
                <fullName>Catholic</fullName>
            </value>
            <value>
                <fullName>Christian</fullName>
            </value>
            <value>
                <fullName>Free-Thinker</fullName>
            </value>
            <value>
                <fullName>Hindu</fullName>
            </value>
            <value>
                <fullName>Muslim</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Sikh</fullName>
            </value>
            <value>
                <fullName>Taoist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>