2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <label>Remarks</label>
    <length>99</length>
    <type>Text</type>
</CustomField>