2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Retirement_Age_HT__c.field-meta.xml
<CustomField>
    <fullName>Retirement_Age_HT__c</fullName>
    <label>Retirement Age:</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>