2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Saturdays__c.field-meta.xml
<CustomField>
    <fullName>Saturdays__c</fullName>
    <label>Saturdays</label>
    <length>30</length>
    <type>Text</type>
</CustomField>