2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Skill_Level__c.field-meta.xml
<CustomField>
    <fullName>Skill_Level__c</fullName>
    <label>Skill Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Installer</fullName>
            </value>
            <value>
                <fullName>Skilled</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>New Crew</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>