2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Skills_Total__c.field-meta.xml
<CustomField>
    <fullName>Skills_Total__c</fullName>
    <formula>Handle_2D__c + Handle_3D__c + Install_2D__c + Install_3D__c + Pack_Crate_2D__c + Pack_Crate_3D__c + Crate_2D__c +  Crate_3D__c +  Material_Id__c + Material_Id_3D__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Skills Total (max 33)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>