2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Soft_Skill_Total__c.field-meta.xml
<CustomField>
    <fullName>Soft_Skill_Total__c</fullName>
    <formula>English__c + Supervisory_Capability__c + Communication_skills__c + Tidiness__c + Punctuality__c + Appearance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Soft Skill Total (Max 18)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>