2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Special_Skills__c.field-meta.xml
<CustomField>
    <fullName>Special_Skills__c</fullName>
    <label>Special Skills</label>
    <length>199</length>
    <type>Text</type>
</CustomField>