2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Spouse_Name__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Name__c</fullName>
    <label>Spouse Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>