2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Spouse_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Relationship__c</fullName>
    <label>Spouse Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Husband</fullName>
            </value>
            <value>
                <fullName>Wife</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>