2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Supervisory_Capability__c.field-meta.xml
<CustomField>
    <fullName>Supervisory_Capability__c</fullName>
    <label>Supervisory Capability</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>