2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Telephone__c.field-meta.xml
<CustomField>
    <fullName>Telephone__c</fullName>
    <label>Telephone</label>
    <length>80</length>
    <type>Text</type>
</CustomField>