2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Tidiness__c.field-meta.xml
<CustomField>
    <fullName>Tidiness__c</fullName>
    <label>Tidiness</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>