2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <formula>15- Punctuality__c - Medical_Leave__c - Damage__c - Compliance__c - Discipline__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>