2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Uniform__c.field-meta.xml
<CustomField>
    <fullName>Uniform__c</fullName>
    <defaultValue>&quot;Short sleeve polo =&quot; &amp; BR() &amp; 
&quot;Long sleeve polo =&quot; &amp; BR() &amp; 
&quot;Down vest =&quot; &amp; BR()&amp; 
&quot;Down jacket =&quot;</defaultValue>
    <label>Uniform</label>
    <type>TextArea</type>
</CustomField>