2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Week_Days__c.field-meta.xml
<CustomField>
    <fullName>Week_Days__c</fullName>
    <label>Week Days</label>
    <length>30</length>
    <type>Text</type>
</CustomField>