2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/recordTypes/Agent.recordType-meta.xml
<RecordType>
    <fullName>Agent</fullName>
    <active>true</active>
    <description>Overseas trading partners (agents) that reciprocrates tonnage with us</description>
    <label>Agent</label>
</RecordType>