2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/recordTypes/All_HT_Staff_Basic.recordType-meta.xml
<RecordType>
    <fullName>All_HT_Staff_Basic</fullName>
    <active>true</active>
    <description>Staff Name, Department, Category</description>
    <label>All HT Staff Basic</label>
</RecordType>