2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/recordTypes/Condo.recordType-meta.xml
<RecordType>
    <fullName>Condo</fullName>
    <active>true</active>
    <label>Condo</label>
</RecordType>