2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/recordTypes/Facilities_Profile.recordType-meta.xml
<RecordType>
    <fullName>Facilities_Profile</fullName>
    <active>true</active>
    <description>To create Facilities profile in the system</description>
    <label>Facilities Profile</label>
</RecordType>