2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/recordTypes/HT_Staff.recordType-meta.xml
<RecordType>
    <fullName>HT_Staff</fullName>
    <active>true</active>
    <label>HT Staff - SG</label>
</RecordType>