2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/recordTypes/IEA_contacts.recordType-meta.xml
<RecordType>
    <fullName>IEA_contacts</fullName>
    <active>true</active>
    <description>Contacts generated from IEA events</description>
    <label>IEA contacts</label>
</RecordType>