2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/recordTypes/IML.recordType-meta.xml
<RecordType>
    <fullName>IML</fullName>
    <active>true</active>
    <description>Record type for International Marketing Ladies contacts</description>
    <label>IML</label>
</RecordType>