2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/recordTypes/Inbound_Shipper.recordType-meta.xml
<RecordType>
    <fullName>Inbound_Shipper</fullName>
    <active>true</active>
    <description>Record type for inbound shipper contacts</description>
    <label>Inbound Shipper</label>
</RecordType>