2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/recordTypes/Ops_Profile.recordType-meta.xml
<RecordType>
    <fullName>Ops_Profile</fullName>
    <active>true</active>
    <description>To create ops profile in the system</description>
    <label>Ops Profile</label>
</RecordType>