2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/recordTypes/Registrar.recordType-meta.xml
<RecordType>
    <fullName>Registrar</fullName>
    <active>true</active>
    <description>To create Registrar profile in the system</description>
    <label>Registrar</label>
</RecordType>