2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/validationRules/Upper_Case_Last_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Upper_Case_Last_Name</fullName>
    <active>false</active>
    <description>Validate last name field in Contacts to ensure values are in upper case</description>
    <errorConditionFormula>IF (UPPER(LastName) = LastName, false,true)</errorConditionFormula>
    <errorDisplayField>LastName</errorDisplayField>
    <errorMessage>Last Name must be in UPPER case</errorMessage>
</ValidationRule>