2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/listViews/Agents_Contacts.listView-meta.xml
<ListView>
    <fullName>Agents_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>Agents Contacts</label>
</ListView>