2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/listViews/ArtmoveContacts.listView-meta.xml
<ListView>
    <fullName>ArtmoveContacts</fullName>
    <columns>Type__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>dc,in,sn,py,kc,kq,pl</value>
    </filters>
    <label>Artmove Contacts</label>
    <language>en_US</language>
</ListView>