2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/listViews/Contacts_Without_Accounts.listView-meta.xml
<ListView>
    <fullName>Contacts_Without_Accounts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTACT.EMAIL_OPT_OUT</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>equals</operation>
    </filters>
    <label>Contacts Without Accounts</label>
    <sharedTo>
        <role>HHG_CS</role>
    </sharedTo>
</ListView>