2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/listViews/Corporate_Contacts.listView-meta.xml
<ListView>
    <fullName>Corporate_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTACT.ADDRESS2_STREET</columns>
    <columns>CONTACT.ADDRESS2_ZIP</columns>
    <columns>CONTACT.ADDRESS2_COUNTRY</columns>
    <columns>CONTACT.LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>notEqual</operation>
        <value>Shipper,Agent,TPR,Competitor</value>
    </filters>
    <label>Corporate Contacts</label>
    <sharedTo>
        <group>HHGSDivision</group>
    </sharedTo>
</ListView>