2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/listViews/HK_List.listView-meta.xml
<ListView>
    <fullName>HK_List</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.RECORDTYPE</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Division__c</columns>
    <filterScope>Everything</filterScope>
    <label>HK List</label>
</ListView>