2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/listViews/IGContacts.listView-meta.xml
<ListView>
    <fullName>IGContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>IG</value>
    </filters>
    <label>IG Contacts</label>
</ListView>