2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/listViews/IML_Contacts.listView-meta.xml
<ListView>
    <fullName>IML_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.IML</value>
    </filters>
    <label>IML Contacts</label>
</ListView>