2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/listViews/local.listView-meta.xml
<ListView>
    <fullName>local</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.ADDRESS2_COUNTRY</field>
        <operation>equals</operation>
        <value>Singapore</value>
    </filters>
    <label>local</label>
    <sharedTo></sharedTo>
</ListView>