2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/listViews/New_this_Month.listView-meta.xml
<ListView>
    <fullName>New_this_Month</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>New this Month</label>
    <language>en_US</language>
    <sharedTo>
        <role>GroupCEO</role>
    </sharedTo>
</ListView>